# opendal-python-bindings

./: .gitignore  AGENTS.md  ARCHITECTURE_PROPOSAL_PATH1.md  ARCHITECTURE_PROPOSAL_PATH2.md  ARCHITECTURE_PROPOSAL_PATH3.md  Cargo.toml  POC_PATH3_PURE_PYTHON.py  debug_downcast.py  debug_factory.py  debug_layers.py  final_test.py  justfile  licenserc.toml  pyproject.toml  pyrightconfig.json  ruff.toml  test_current_state.py  test_final_solution.py  test_layer_direct.py  test_type_compatibility.py  upgrade.md
dev/: Cargo.toml
dev/src/: main.rs
dev/src/generate/: mod.rs  service.j2  service.rs
layers/concurrent-limit/: Cargo.toml  README.md  build.rs  pyproject.toml
layers/concurrent-limit/python/opendal_layer_concurrent_limit/: __init__.py  __init__.pyi
layers/concurrent-limit/python/opendal_layer_concurrent_limit/_layer_concurrent_limit/: __init__.pyi
layers/concurrent-limit/src/: concurrent_limit.rs  lib.rs
layers/mime-guess/: Cargo.toml  README.md  build.rs  pyproject.toml
layers/mime-guess/python/opendal_layer_mime_guess/: __init__.py  __init__.pyi
layers/mime-guess/python/opendal_layer_mime_guess/_layer_mime_guess/: __init__.pyi
layers/mime-guess/src/: lib.rs  mime_guess.rs
layers/retry/: Cargo.toml  README.md  build.rs  pyproject.toml
layers/retry/python/opendal_layer_retry/: __init__.py  __init__.pyi  _layer_retry.pyi
layers/retry/python/opendal_layer_retry/_layer_retry/: __init__.pyi
layers/retry/src/: factory.rs  lib.rs  retry.rs
opendal/: Cargo.toml  pyproject.toml
opendal-pyo3/: Cargo.toml
opendal-pyo3/src/: layers.rs  lib.rs  operator.rs  utils.rs
opendal/python/opendal/: __init__.py  layers.pyi  operator.pyi  operators.py
opendal/python/opendal/layers/: __init__.pyi
opendal/python/opendal/operator/: __init__.pyi
opendal/src/: lib.rs
opendal/src/opendal/: __init__.py  _layer_support.py  operator.pyi  operators.py
opendal/tests/: conftest.py  test_read.py  test_sync_delete.py  test_write.py
pyo3-opendal/: Cargo.toml
pyo3-opendal/src/: capability.rs  export.rs  ffi.rs  layers.rs  lib.rs  operator.rs  options.rs  type_registry.rs  utils.rs
pyo3-opendal/src/codegen/: layer.rs  mod.rs  parser.rs  service.rs  types.rs  utils.rs
scripts/: add_package_to_opendal.py  add_service_to_opendal.py
services/fs/: Cargo.toml  README.md  build.rs  pyproject.toml
services/fs/python/opendal_service_fs/: __init__.py  __init__.pyi  _service_fs.pyi
services/fs/python/opendal_service_fs/_service_fs/: __init__.pyi
services/fs/src/: factory.rs  fs.rs  lib.rs
services/fs/src/opendal_fs_service/: __init__.py  operator.pyi
services/s3/: Cargo.toml  README.md  build.rs  pyproject.toml
services/s3/python/opendal_service_s3/: __init__.py  __init__.pyi
services/s3/python/opendal_service_s3/_service_s3/: __init__.pyi
services/s3/src/: factory.rs  lib.rs  s3.rs
services/s3/src/opendal_s3_service/: __init__.py  operator.pyi
templates/package/: Cargo.toml.jinja  README.md.jinja  build.rs.jinja  copier.yml  pyproject.toml.jinja
templates/package/python/opendal_{{ package_type }}_{{ package_snake }}/: __init__.py.jinja
templates/package/src/: lib.rs.jinja
templates/service/: Cargo.toml.jinja  README.md.jinja  build.rs.jinja  copier.yml  pyproject.toml.jinja
templates/service/python/opendal_service_{{ service_name  | replace('-', '_') }}/: __init__.py.jinja
templates/service/python/opendal_service_{{ service_snake }}/: __init__.py.jinja
templates/service/src/: lib.rs.jinja  {{ service_snake }}.rs.jinja
