# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[project]
dependencies = []
description = "Apache OpenDAL™ Python Bindings (workspace)"
name = "opendal-python-bindings"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[tool.uv.workspace]
members = ["opendal", "services/*", "layers/*"]

[dependency-groups]
dev = ["maturin>=1.9.4,<2.0", "ruff>=0.9.10"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings[python]", "mkdocs-jupyter"]
test = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.25.3",
  "python-dotenv>=1.0.1",
  "pydantic-settings>=2.8.1",
]
