# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "opendal-pyo3"
publish = false

authors = { workspace = true }
categories = { workspace = true }
description = "Apache OpenDAL™ Python Binding (pyo3)"
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[features]

# we build cp311-abi3 and cp310 wheels now, move this to pyo3 after we drop cp310
abi3 = ["pyo3/abi3-py311"]

[lib]
crate-type = ["rlib"]

[dependencies]
bytes = { workspace = true }
dict_derive = { workspace = true }
futures = { workspace = true }
jiff = { workspace = true }
# TODO change this later to relative path
mea = { workspace = true }
opendal = { git = "https://github.com/apache/opendal.git", branch = "main", features = [
  "blocking",
] }
opendal-layer-mime-guess = { git = "https://github.com/apache/opendal.git", branch = "main" }
pyo3 = { workspace = true }
pyo3-async-runtimes = { workspace = true }
pyo3-stub-gen = { workspace = true }
tokio = { workspace = true }
