# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[project]
name = "opendal"

dependencies = []
dynamic = [
  "version",
  "description",
  "keywords",
  "license",
  "summary",
  "home_page",
  "author",
  "author_email",
  "project_url",
]
readme = "README.md"
requires-python = ">=3.12"

[project.optional-dependencies]
layer-concurrent-limit = ["opendal-layer-concurrent-limit"]
layer-mime-guess = ["opendal-layer-mime-guess"]
layer-retry = ["opendal-layer-retry"]
service-fs = ["opendal-service-fs"]
service-s3 = ["opendal-service-s3"]

[dependency-groups]
benchmark = [
  "boto3>=1.37.9",
  "boto3-stubs[essential]>=1.37.9",
  "gevent>=24.11.1",
  "greenify>=0.4.3",
  "greenlet>=3.1.1",
  "pydantic>=2.10.6",
]

[tool.uv.sources]
opendal-layer-concurrent-limit = { workspace = true }
opendal-layer-mime-guess = { workspace = true }
opendal-layer-retry = { workspace = true }
opendal-service-fs = { workspace = true }
opendal-service-s3 = { workspace = true }

[tool.maturin]
module-name = "opendal._core"
python-source = "python"

[build-system]
build-backend = "maturin"
requires = ["maturin>=1.9.4,<2.0"]
