# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "pyo3-opendal"
publish = false

authors = { workspace = true }
categories = { workspace = true }
description = "Apache OpenDAL™ Python Bindings (pyo3)"
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["rlib"]

[features]
codegen = [
  "dep:anyhow",
  "dep:cargo_metadata",
  "dep:log",
  "dep:proc-macro2",
  "dep:quote",
  "dep:serde",
  "dep:serde_json",
  "dep:syn",
]
default = ["runtime"]
runtime = [
  "dep:bytes",
  "dep:futures",
  "dep:jiff",
  "dep:mea",
  "dep:opendal-core",
  "dep:pin-project",
  "dep:pyo3",
  "dep:pyo3-async-runtimes",
  "dep:pyo3-stub-gen",
  "dep:pythonize",
  "dep:serde",
  "dep:serde_json",
  "dep:tokio",
]
stub-gen = ["dep:pyo3-stub-gen", "dep:anyhow"]

[dependencies]
anyhow = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
cargo_metadata = { version = "0.19.1", optional = true }
futures = { workspace = true, optional = true }
jiff = { workspace = true, optional = true }
log = { version = "0.4.22", optional = true }
mea = { workspace = true, optional = true }
opendal-core = { workspace = true, features = ["blocking"], optional = true }
pin-project = { version = "1", optional = true }
proc-macro2 = { version = "1.0.92", optional = true }
pyo3 = { workspace = true, optional = true }
pyo3-async-runtimes = { workspace = true, optional = true }
pyo3-stub-gen = { workspace = true, optional = true }
pythonize = { workspace = true, optional = true }
quote = { version = "1.0.37", optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
syn = { version = "2.0.91", features = [
  "visit",
  "full",
  "extra-traits",
], optional = true }
tokio = { workspace = true, optional = true }
