# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[project]
name = "opendal-layer-retry"

dependencies = ["opendal"]
dynamic = [
  "version",
  "description",
  "keywords",
  "license",
  "summary",
  "home_page",
  "author",
  "author_email",
  "project_url",
]
readme = "README.md"
requires-python = ">=3.12"

[tool.uv.sources]
opendal = { workspace = true }

[tool.maturin]
module-name = "opendal_layer_retry._layer_retry"
python-source = "python"
strip = true

[build-system]
build-backend = "maturin"
requires = ["maturin>=1.9.4,<2.0"]
