# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "opendal-service-fs"

authors = { workspace = true }
description = "Apache OpenDAL™ Python Binding (fs service)"
edition = { workspace = true }
homepage = { workspace = true }
keywords = []
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
name = "_service_fs"

[[bin]]
doc = false
name = "stub_gen_fs"

[dependencies]
opendal-service-fs = { git = "https://github.com/apache/opendal.git", branch = "main" }
pyo3 = { workspace = true }
pyo3-async-runtimes = { workspace = true }
pyo3-opendal = { workspace = true, features = ["runtime", "stub-gen"] }
pyo3-stub-gen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
pyo3-opendal = { workspace = true, features = ["codegen"] }
